// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SlideSection Should change the position when calling the children methods 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 24px;
}

.c1::before {
  content: ' ';
  display: block;
  width: 44px;
  height: 4px;
  background-color: #DDD;
  border-radius: 100px;
}

.c0 {
  background-color: #fff;
  height: 0px;
  position: absolute;
  top: 100%;
  left: 0;
  right: 0;
  -webkit-transition: -webkit-transform ease 300ms;
  -webkit-transition: transform ease 300ms;
  transition: transform ease 300ms;
  box-shadow: 0 4px 4px rgba(0,0,0,.25);
}

.c0.default {
  -webkit-transform: translateY(-0px);
  -ms-transform: translateY(-0px);
  transform: translateY(-0px);
}

.c0.expanded {
  -webkit-transform: translateY(-0px);
  -ms-transform: translateY(-0px);
  transform: translateY(-0px);
  overflow: scroll;
}

.c0.reduced {
  -webkit-transform: translateY(-24px);
  -ms-transform: translateY(-24px);
  transform: translateY(-24px);
}

<div
  class="reduced c0"
>
  <div
    class=""
  >
    <div
      aria-hidden="true"
      class="c1"
    />
    <div />
    <div>
      <button
        type="button"
      >
        default
      </button>
      <button
        type="button"
      >
        reduce
      </button>
      <button
        type="button"
      >
        expand
      </button>
    </div>
  </div>
</div>
`;

exports[`SlideSection Should change the position when calling the children methods 2`] = `
<div
  class="expanded sc-htpNat fxlGzn"
>
  <div
    class=""
  >
    <div
      aria-hidden="true"
      class="sc-bdVaJa lmxsFm"
    />
    <div />
    <div>
      <button
        type="button"
      >
        default
      </button>
      <button
        type="button"
      >
        reduce
      </button>
      <button
        type="button"
      >
        expand
      </button>
    </div>
  </div>
</div>
`;

exports[`SlideSection Should change the position when calling the children methods 3`] = `
<div
  class="default sc-htpNat fxlGzn"
>
  <div
    class=""
  >
    <div
      aria-hidden="true"
      class="sc-bdVaJa lmxsFm"
    />
    <div />
    <div>
      <button
        type="button"
      >
        default
      </button>
      <button
        type="button"
      >
        reduce
      </button>
      <button
        type="button"
      >
        expand
      </button>
    </div>
  </div>
</div>
`;
